mitarbeiterverwaltung-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mitarbeiterverwaltung
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mitarbeiterverwaltung
  template:
    metadata:
      labels:
        app: mitarbeiterverwaltung
    spec:
      containers:
        - name: mitarbeiterverwaltung
          image: mitarbeiterverwaltung:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mitarbeiterverwaltung
spec:
  selector:
    app: mitarbeiterverwaltung
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
